syntax = "proto3";

package belphegor;

option go_package = "internal/types";

message EncryptedMessage {
  repeated bytes Parts = 1;
}