syntax = "proto3";
import "device.proto";

package belphegor;

option go_package = "internal/types/proto";

// GreetMessage represents the greeting message
// Used to shake hands with other nodes
message GreetMessage {
  string Version = 2;
  Device Device = 3;
  uint32 Port = 5;
  bytes PublicKey = 6;
}